--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,39 @@ footer a {
   font-size: 2.3rem;
   margin: 20px 15px;
 }
+
+/* PAGINA FT-WORKS*/
+
+section.dashb {
+  padding: 20px 10px 20px 10px;
+}
+section.dashb h2 {
+  font-size: 2rem;
+  text-align: left;
+  margin: 20px 0 40px;
+}
+section.dashb ul li {
+  margin: 15px 0 15px 0;
+}
+section.dashb ul li h3 {
+  font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 130%;
+  margin: 0 0 15px 0;
+}
+
+section.dashb ul li p {
+  margin: 10px 0;
+}
+
+section.dashb ul li p.info {
+  color: #21243d;
+}
+
+section.dashb ul li p.info span {
+  background: #ff7c7c;
+  color: white;
+  border-radius: 16px;
+  padding: 5px 10px;
+  font-weight: bold;
+}
