--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ footer a {
   font-size: 2.3rem;
   margin: 20px 15px;
 }
+
+footer p {
+  margin: 15px 0 15px;
+}
 /* ============================================================================================
                                 ESPECÍFICO   
    ============================================================================================                            
